
dist_scitecolib_DATA = color.tes lexer.tes session.tes fnkeys.tes
dist_scitecolib_DATA += string.tes

# Install and distribute entire directories
# It would be annoying to list all the files
colorschemedir = $(scitecolibdir)/colors
dist_colorscheme_DATA = colors/*.tes
lexerdir = $(scitecolibdir)/lexers
dist_lexer_DATA = lexers/*.tes
