
dist_scitecolib_DATA = color.tes lexer.tes session.tes fnkeys.tes
dist_scitecolib_DATA += string.tes

# This list must be extended when adding
# a new color scheme:
colorschemedir = $(scitecolibdir)/colors
dist_colorscheme_DATA = colors/terminal.tes

# This list must be extended when adding
# a new lexer configuration:
lexerdir = $(scitecolibdir)/lexers
dist_lexer_DATA = lexers/patch.tes \
                  lexers/sh.tes \
                  lexers/cpp.tes \
                  lexers/cmake.tes \
                  lexers/batch.tes \
                  lexers/xml.tes \
                  lexers/make.tes
