
dist_scitecolib_DATA = color.tes lexer.tes session.tes fnkeys.tes
dist_scitecolib_DATA += string.tes getopt.tes

# Helper script for creating lexer definitions
EXTRA_DIST = scite2co.lua

# This list must be extended when adding
# a new color scheme:
colorschemedir = $(scitecolibdir)/colors
dist_colorscheme_DATA = colors/terminal.tes \
                        colors/solarized.tes

lexerdir = $(scitecolibdir)/lexers

# Lexer configurations for language
# syntax highlighting.
# This list must be extended when adding
# a new lexer configuration:
dist_lexer_DATA = lexers/verilog.tes \
                  lexers/php.tes \
                  lexers/pascal.tes \
                  lexers/rebol.tes \
                  lexers/flagship.tes \
                  lexers/vhdl.tes \
                  lexers/ave.tes \
                  lexers/go.tes \
                  lexers/f95.tes \
                  lexers/lisp.tes \
                  lexers/ada.tes \
                  lexers/d.tes \
                  lexers/octave.tes \
                  lexers/mako.tes \
                  lexers/lout.tes \
                  lexers/lua.tes \
                  lexers/tal.tes \
                  lexers/systemverilog.tes \
                  lexers/matlab.tes \
                  lexers/flash.tes \
                  lexers/make.tes \
                  lexers/eiffel.tes \
                  lexers/swift.tes \
                  lexers/r.tes \
                  lexers/vala.tes \
                  lexers/purebasic.tes \
                  lexers/scheme.tes \
                  lexers/docbook.tes \
                  lexers/cobol.tes \
                  lexers/powerpro.tes \
                  lexers/tcl.tes \
                  lexers/cmake.tes \
                  lexers/freebasic.tes \
                  lexers/xml.tes \
                  lexers/asl.tes \
                  lexers/c.tes \
                  lexers/cpp.tes \
                  lexers/gob.tes \
                  lexers/devicetree.tes \
                  lexers/test.tes \
                  lexers/kix.tes \
                  lexers/baan.tes \
                  lexers/js.tes \
                  lexers/spice.tes \
                  lexers/idl.tes \
                  lexers/ch.tes \
                  lexers/vb.tes \
                  lexers/awk.tes \
                  lexers/diff.tes \
                  lexers/gap.tes \
                  lexers/mmixal.tes \
                  lexers/pike.tes \
                  lexers/asm.tes \
                  lexers/vxml.tes \
                  lexers/cs.tes \
                  lexers/abaqus.tes \
                  lexers/java.tes \
                  lexers/avs.tes \
                  lexers/f77.tes \
                  lexers/batch.tes \
                  lexers/specman.tes \
                  lexers/rc.tes \
                  lexers/tacl.tes \
                  lexers/bash.tes \
                  lexers/oscript.tes \
                  lexers/html.tes \
                  lexers/perl.tes \
                  lexers/inno.tes \
                  lexers/pov.tes \
                  lexers/rust.tes \
                  lexers/blitzbasic.tes \
                  lexers/caml.tes \
                  lexers/python.tes \
                  lexers/yaml.tes \
                  lexers/markdown.tes

# This lexer is responsible for styling
# womanpages and is thus useful even when omitting
# the syntax highlighting lexers.
dist_lexer_DATA += lexers/woman.tes
