AM_CPPFLAGS += -I$(top_srcdir)/src

AM_CXXFLAGS = -Wall -Wno-char-subscripts

noinst_LTLIBRARIES = libsciteco-interface.la
libsciteco_interface_la_SOURCES = interface-curses.cpp interface-curses.h \
                                  curses-utils.cpp curses-utils.h \
                                  curses-info-popup.cpp curses-info-popup.h
